--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<link rel="stylesheet" type="text/css" href="css/responsive.css">
 
 
-		<!-- Fix Internet Explorer ______________________________________-->
+		<!-- Fix Internet Explorer -->
 
 		<!--[if lt IE 9]>
 			<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
