--- a/academics/CSEteachers.html
+++ b/academics/CSEteachers.html
@@ -14,7 +14,7 @@
    <link rel="icon" type="image/png" sizes="56x56" href="../images/home/clg_logo_main.png">
 
 
-    <!-- Main style sheet -->
+    <!-- Main style sheeeeeeeet -->
     <link rel="stylesheet" type="text/css" href="../css/style.css">
     <!-- responsive style sheet -->
     <link rel="stylesheet" type="text/css" href="../css/responsive.css">
