--- a/notice.html
+++ b/notice.html
@@ -103,7 +103,7 @@
 			<section class="inner-page-banner">
 				<div class="opacity">
 					<div class="container">
-						<h2 style="position: absolute; margin-top: -60px; margin-left: 7%; text-align: center;"> &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; DAYANANDA SAGAR COLLEGE OF ENGINEERING</h2>
+						<h2>DAYANANDA SAGAR COLLEGE OF ENGINEERING</h2>
 						<ul>
 							
 							<li>Affiliated to VTU, Belagavi</li>
