login form updated

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 										<li><a href="academics/MAEteachers.html" class="tran3s">ME Faculty</a></li>
 									</ul>
 								</li>
-								<li><a href="login_form.html">LOGIN</a></li>
+								<li><a href="http://localhost:3036/">LOGIN</a></li>
 							<li><a href="contact.html">CONTACT</a></li>
 					     </ul>
 					   </div><!-- /.navbar-collapse -->
