--- a/Student_Details.html
+++ b/Student_Details.html
@@ -1,6 +1,8 @@
 <html>
     <title>Student Details</title>
     <head>
-        
+        <body>
+            hi
+        </body>
     </head>
 </html>
