task done by varshitha

--- a/academics.html
+++ b/academics.html
@@ -10,7 +10,7 @@
 
     <title>ACADEMICS</title>
 
-    <!-- Favicon -->
+    <!-- Favicon ...............-->
    <link rel="icon" type="image/png" sizes="56x56" href="images/home/clg_logo_main.png">
 
 
