--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
 
     <title>About</title>
 
-    <!-- Favicon -->
+    <!-- Favicon........................................... -->
     <link rel="icon" type="image/png" sizes="56x56" href="images/home/clg_logo_main.png">
 
 
