--- a/campus.html
+++ b/campus.html
@@ -39,7 +39,7 @@
 		<!-- Bootstrap JS -->
 		<script type="text/javascript" src="vendor/bootstrap/bootstrap.min.js"></script>
 
-		<!-- Vendor js _________ -->
+		<!-- Vendor js _________.......... -->
 		
 		<!-- owl.carousel -->
 		<script type="text/javascript" src="vendor/owl-carousel/owl.carousel.min.js"></script>
