--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <!-- For Resposive Device -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Contact</title>
+    <title>Contacts</title>
 
     <!-- Favicon -->
    <link rel="icon" type="image/png" sizes="56x56" href="images/home/clg_logo_main.png">
