--- a/academics.html
+++ b/academics.html
@@ -5,12 +5,12 @@
     <!-- For IE -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <!-- For Resposive Device.............. -->
+    <!-- For Resposive Device....''';;;;;;'.......... -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>ACADEMICS</title>
 
-    <!-- Favicon ...............-->
+    <!-- Favicon -->
    <link rel="icon" type="image/png" sizes="56x56" href="images/home/clg_logo_main.png">
 
 
