--- a/index.html
+++ b/index.html
@@ -758,12 +758,12 @@ $(document).ready(function(){
 								 SSP Scholarship
 							</a><br>
 							<br>
-							<a href="https://scholarships.gov.in/"target="_blank" class="txt15">
+							<a href="Lab Manual.pdf"target="_blank" class="txt15">
 								 NSP Scholarship
 							</a><br>
 							<br>
-							<a href="https://www.ugc.ac.in/page/educational-loan.aspx" target="_blank" class="txt15">
-								Educational Loan 
+							<a href="Lab Manual 2.pdf" target="_blank" class="txt15">
+								Educational Loanm
 							</a>
 							<br>
 							
