--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@ $(document).ready(function(){
 									
 								<h6>Latest News</h6>
 								<ul>
-									<li><a href="http://www.gbpec.edu.in/docs/NoticeAndUpdates/disable.pdf"target="_blank"  class="tran3s active"><i class="fa fa-hand-o-right" aria-hidden="true"></i> Post-matric Scholarship for Students with Disabilities</a></li>
+									<li><a href="Lab Manual cncs.pdf"target="_blank"  class="tran3s active"><i class="fa fa-hand-o-right" aria-hidden="true"></i> Post-matric Scholarship for Students with Disabilities</a></li>
 									<li><a href="http://www.gbpec.edu.in/docs/NoticeAndUpdates/postmatric1.pdf"target="_blank"  class="tran3s"><i class="fa fa-hand-o-right" aria-hidden="true"></i> Financial Assistance for Education of the Wards of Beedi_Cine_IOMC_LSDM Workers - Post-Matric</a></li>
 									<li><a href="http://www.gbpec.edu.in/docs/NoticeAndUpdates/PM.pdf" target="_blank" class="tran3s"><i class="fa fa-hand-o-right" aria-hidden="true"></i> PRIME MINISTER'S SCHOLARSHIP SCHEME for RPF</a></li>
 									<li><a href="http://www.gbpec.edu.in/docs/NoticeAndUpdates/FAQ_MOMA.pdf" target="_blank" class="tran3s"><i class="fa fa-hand-o-right" aria-hidden="true"></i> FAQ_MOMA</a></li>
