--- a/index.html
+++ b/index.html
@@ -762,8 +762,8 @@ $(document).ready(function(){
 								 NSP Scholarship
 							</a><br>
 							<br>
-							<a href="Lab Manual 2.pdf" target="_blank" class="txt15">
-								Educational Loanm
+							<a href="abc.txt" target="_blank" class="txt15">
+								Educational Loan
 							</a>
 							<br>
 							
