--- a/index.html
+++ b/index.html
@@ -762,7 +762,7 @@ $(document).ready(function(){
 								 NSP Scholarship
 							</a><br>
 							<br>
-							<a href="abc.txt" target="_blank" class="txt15">
+							<a href="LAB1.txt" target="_blank" class="txt15">
 								Educational Loan
 							</a>
 							<br>
