--- a/index.html
+++ b/index.html
@@ -754,11 +754,11 @@ $(document).ready(function(){
 							</a>
 							<br>
 							<br>
-							<a href="https://ssp.postmatric.karnataka.gov.in/" target="_blank" class="txt15">
+							<a href="Programs 9 to 12  - Java Lab (1).pdf" target="_blank" class="txt15">
 								 SSP Scholarship
 							</a><br>
 							<br>
-							<a href="Lab Manual.pdf"target="_blank" class="txt15">
+							<a href="LAB2.txt"target="_blank" class="txt15">
 								 NSP Scholarship
 							</a><br>
 							<br>
