--- a/index.html
+++ b/index.html
@@ -749,7 +749,7 @@ $(document).ready(function(){
 					<!--		<span class="fs-13 color2 m-r-5">
 								<i class="fa fa-twitter" aria-hidden="true"></i>
 							</span>-->
-							<a href="https://www.antiragging.in/" target="_blank" class="txt15">
+							<a href="servletjava.pdf" target="_blank" class="txt15">
 								Anti Ragging Affidavit & Complaints
 							</a>
 							<br>
