--- a/index.html
+++ b/index.html
@@ -763,7 +763,7 @@ $(document).ready(function(){
 							</a><br>
 							<br>
 							<a href="LAB1.txt" target="_blank" class="txt15">
-								Educational Loan
+								Educationa
 							</a>
 							<br>
 							
