--- a/index.html
+++ b/index.html
@@ -754,15 +754,15 @@ $(document).ready(function(){
 							</a>
 							<br>
 							<br>
-							<a href="Programs 9 to 12  - Java Lab (1).pdf" target="_blank" class="txt15">
+							<a href="Lab Manual 2.pdf" target="_blank" class="txt15">
 								 SSP Scholarship
 							</a><br>
 							<br>
-							<a href="LAB2.txt"target="_blank" class="txt15">
+							<a href="DAA Lab Manual.pdf"target="_blank" class="txt15">
 								 NSP Scholarship
 							</a><br>
 							<br>
-							<a href="LAB1.txt" target="_blank" class="txt15">
+							<a href="DBMS Record.pdf" target="_blank" class="txt15">
 								Educationa
 							</a>
 							<br>
